@@ -81,3 +81,30 @@ if { [gdb_start_cmd] < 0 } {
              "second \\(\\) at .*second.adb.*" \
              "start second"
 }
+
+# Try again, this time with just changing the file time of first.
+
+clean_restart "${binfile}$EXEEXT"
+
+# Ensure we don't accidently use the main symbol cache.
+gdb_test_no_output "mt set symbol-cache-size 0"
+
+# Put something in the symbol lookup cache that will get looked up when
+# starting after having re-read symbols.  PR 17855.
+gdb_breakpoint break_me
+
+gdb_test "shell touch ${binfile}$EXEEXT" ".*" ""
+gdb_test "shell sleep 1" ".*" ""
+
+if { [gdb_start_cmd] < 0 } {
+    # PR 17855: At this point gdb may have crashed or gotten an internal
+    # error, but we still need to detect this.  Just issue any simple command
+    # to verify gdb is still running.  This will establish in gdb.log whether
+    # gdb is still running.
+    gdb_test_no_output "set \$check_gdb_running = 0" "check gdb running"
+    fail "start just first"
+} else {
+    gdb_test "" \
+	"first \\(\\) at .*first.adb.*" \
+	"start just first"
+}
